--- a/.eslintrc
+++ b/.eslintrc
@@ -19,4 +19,7 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
+    "rules": {
+      "react/prop-types": "off"
+    }
 }
