Commit for more help

--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "jammming",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "http://www.tim-albert.com/jammming",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "main": "index.js",
   "devDependencies": {
     "eslint": "^4.18.2",
-    "eslint-plugin-react": "^7.7.0"
-  }
+    "eslint-plugin-react": "^7.7.0",
+    "gh-pages": "^1.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "/Users/talbert1209/Projects/jammming/.git/"
+  },
+  "author": "",
+  "license": "ISC"
 }
